# Gauntlet-

./: .env.example  .gitattributes  .gitignore  AGENTS.md  ANTIGRAVITY_LEDGER.md  CHANGELOG.md  CLAUDE.md  CONTRACT_AUDIT.md  CONTRIBUTING.md  CURRENT_RUNTIME_AUTHORITY.md  DEPLOY.md  PR_210_220_221_REVIEW.md  PR_211_217_218_219_229_231_233_235_236_REVIEW.md  PR_239_250_REVIEW.md  PR_251_252_253_254_REVIEW_COMMENTS.md  README.md  REPORT_PR_REVIEW.md  RUBERRA-DISCIPLINE.md  RUBERRA_BASTION_ENGINE.md  RUBERRA_CORE_FREEZE.md  RUBERRA_CORE_LAW_PACK.md  RUBERRA_EXECUTION_BLOCK.md  RUBERRA_EXECUTION_CANON.md  RUBERRA_FOUNDER_SIGNATURE_LAW.md  RUBERRA_MATRIX_DISCIPLINE.md  RUBERRA_MOTHER_BLUEPRINT.md  RUBERRA_PRODUCT_TRUTH.md  RUBERRA_REFINEMENT_STRATEGY.md  RUBERRA_REPO_SELF_KNOWLEDGE.md  RUBERRA_STACK_CLOSURE_TRACKER.md  RUBERRA_TOKEN_DISCIPLINE.md  RUBERRA_TRANSMUTATION_PROTOCOL.md  RUBERRA_VISION_DNA.md  RUBERRA_WORKSPACE_CONSTITUTION.md  RUNBOOK.md  SECURITY.md  build_final.txt  build_final_2.txt  build_final_3.txt  build_final_complete.txt  (+14 more)
.claude/: AGENTIC_SPINE.md  settings.json
.github/: CODEOWNERS  dependabot.yml
_legacy/: router.tsx
api/: _forwarder.ts  chat.ts  gauntlet.ts  ruberra.ts  signal.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/tests/: smoke.rs
backend/: .env.example  Dockerfile  README.md  agent.py  agents.py  auth.py  backup.py  composer.py  composer_settings.py  config.py  db.py  doctrine.py  engine.py  gemini_provider.py  groq_provider.py  log_redaction.py  main.py  memory.py  memory_records.py  migrate.py  missions.py  mock_client.py  model_gateway.py  models.py  observability.py  parity_check.py  pause_registry.py  persistence.py  rate_limit.py  requirements.txt  runs.py  runtime.py  security_headers.py  server.py  spine.py  test_composer.py  test_computer_use_tool.py  test_engine_init.py  test_provider_fallback.py  test_security.py  (+2 more)
control-center/: main.tsx  router.tsx
docs/: A11Y_AUDIT.md  ARCHITECTURE.md  COMPONENT_HIERARCHY.md  COMPOSER_V0.md  CREW_CHAMBER_STATUS.md  DESIGN_TOKENS.md  EMPTY_STATES.md  FIRST_MISSION.md  INFORMATION_ARCHITECTURE.md  KEYBOARD.md  MOTION.md  OPERATIONS.md  RESPONSIVE.md  SECURITY_AUDIT.md  VOICE.md
exec-backend/: index.mjs
guidelines/: CURSOR_CASCADE_SURFACE_STATE.md  Guidelines.md  RUBERRA_CANON.md
ops/: AGENT_REPORT.md  AI_ORCHESTRATION.md  AUTO_START.md  BRAIN_ROUTING.md  BRIDGE_AGENT.md  BRIDGE_QUEUE.json  BRIDGE_STATE.md  CANONICAL_TRUTH.md  CANON_LOCK.md  CODEX_LOOP.md  CONNECTORS.md  DISPATCH_001.md  GENESIS_CORE.md  HANDOFF.md  HANDOFF_LEDGER.md  LIVE_STATE.md  MERGE_DISCIPLINE.md  MERGE_GATE.md  MILESTONE_TRACKER.md  NEXT_ACTION.md  WAVE_01.md  (+21 more)
(+687 files in other folders)
