[package]
name = "gauntlet-desktop"
version = "1.0.1"
description = "Gauntlet — desktop cursor capsule (Tauri 2)."
authors = ["Gauntlet"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "gauntlet_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tokio = { version = "1", features = ["rt", "time", "macros"] }
# Computer-use primitives (Phase 3, MVP). Cross-platform mouse +
# keyboard control. macOS triggers the Accessibility permission
# prompt on first use; X11 works directly; Wayland is unsupported
# (enigo returns an error — surfaced as a typed Tauri command error
# the JS gate UI displays).
enigo = "0.6"

[features]
# Default Tauri custom protocol — required for production builds.
custom-protocol = ["tauri/custom-protocol"]
